--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "selbot",
+  "name": "discord-voice-bot",
   "version": "1.0.0",
+  "description": "Discord voice channel bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node -r ./shim.js index.js",
+    "dev": "node -r ./shim.js index.js"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "discord.js-selfbot-v13": "^3.7.0"
+  },
+  "engines": {
+    "node": ">=16.9.0"
   }
 }
